--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,30 @@
 *
 
+
 !.gitignore
 
+
+
 !sysfs
+
 !sysfs/*.cpp
+
 !sysfs/*.sh
+
 !sysfs/Makefile
 
+
+
 !gpiod
+
 !gpiod/*.sh
+
 !gpiod/*.cpp
+
 !gpiod/Makefile
+
+!ioctl
+
+!ioctl/*.cpp
+
+!ioctl/Makefile
